# CyberSathi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  walkthrough.md
app/: __init__.py
app/config/: __init__.py  config.py
app/logging/: __init__.py  logger.py
app/models/: __init__.py  machine_learning.py
app/prompts/: forensic_report_builder.py  prompt_builder.py
app/routers/: analyze.py
app/schemas/: analyze.py  evidence.py  safety.py
app/services/: analysis_service.py  collectors.py  evidence_builder.py  evidence_orchestrator.py  llm_adapter.py  phishing_database.py
app/settings/: __init__.py  settings.py
scripts/: benchmark_e2e.py  benchmark_pipeline.py  demo_analyze.py  demo_collectors.py  demo_prompt_builder.py
tests/: test_evidence_pipeline.py  test_html_collector.py  test_playwright_collector.py  test_url_detector.py  test_website_collector.py
