[project]
name = "cybersathi"
version = "0.1.0"
description = "AI-powered Cyber Safety Assistant backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "beautifulsoup4>=4.12.3",
    "python-whois>=0.9.4",
    "dnspython>=2.6.1",
    "requests>=2.32.3",
    "httpx>=0.27.0",
    "transformers>=4.42.3",
    "playwright>=1.44.0",
    "python-dotenv>=1.0.1",
    "torch>=2.3.0",
    "google-generativeai>=0.8.0",
    "pillow>=10.0.0",
    "google-genai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
]
